[Computer Vision] Bug fix.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
   - title: "Tags"
     url: /tags/
   - title: "Computer Vision"
-    url: /computer_vision/
+    url: /computer vision/
   - title: "Machine Learning"
-    url: /computer_vision/
+    url: /machine learning/
